espresso (0.99.13) UNRELEASED; urgency=low

  * Remove the GTK frontend's reliance on step numbers entirely; refer to
    widget names for each step instead. This makes it easier to add steps.
  * Fix the GTK frontend's reboot button.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 17 Feb 2006 16:33:21 +0000

espresso (0.99.12) dapper; urgency=low

  [ Tollef Fog Heen ]
  * Use named constants rather than just numbers for the steps in gtkui.py
  * Move the common parts (logo, photo and breadcrumb) outside the
    notebook so they don't have to be kept in sync.  Adjust code to
    highlight the correct one.
  * Use named constants instead of just numbers which make inserting new
    steps in the beginning possible.
  * Begin implementing a keyboard selector.

  [ Colin Watson ]
  * Stop destroying the browser widget; following Tollef's changes, this
    changes the number of pages in the notebook, causing much confusion.
  * Use named constants in espresso.validation; construct returned list more
    sensibly.
  * Hide the disk selector until it becomes useful.
  * More PEP 8 reformatting, this time in espresso.misc.
  * Fix 'espresso <frontend-name>' not to try to do two installs.
  * Provide a .desktop file for the GTK frontend.
  * Remove Guadalinex-specific text from warning and abort dialogs.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 15 Feb 2006 23:00:58 +0000

espresso (0.99.11) dapper; urgency=low

  [ Colin Watson ]
  * Stop auto-hiding the panel when running the GTK frontend.
  * Stop logging how much time was spent in the installation; it makes it
    unnecessarily painful to quit espresso if you try to run it as non-root.
  * Get rid of the confirmation checkbox for automatic partitioning; partman
    pops up a more detailed confirmation dialog for this now.
  * Make ESPRESSO_DEBUG=1 imply DEBCONF_DEBUG='developer|filter' for ease of
    debugging.
  * Stop building espresso-frontend-cloner, espresso-guadalinex-artwork, and