@@ -3,6 +3,8 @@ espresso (0.99.13) UNRELEASED; urgency=low
   * Remove the GTK frontend's reliance on step numbers entirely; refer to
     widget names for each step instead. This makes it easier to add steps.
   * Fix the GTK frontend's reboot button.
+  * Remove fstab configuration; partman does all this now, and trying to do
+    it ourselves breaks in the autopartitioning case.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 17 Feb 2006 16:33:21 +0000
 
